fix spacing

--- a/web/src/components/AboutPage/AboutPage.css
+++ b/web/src/components/AboutPage/AboutPage.css
@@ -1,1 +1,5 @@
-
+@media only screen and (max-width: 600px) {
+    .team-container {
+        top: -100px;
+    }
+}
