--- a/web/src/components/team-member/team-member.css
+++ b/web/src/components/team-member/team-member.css
@@ -23,7 +23,7 @@ img.team-member__photo, .team-accent-dot {
 
 .ellie-photo {
   top: 100px;
-  left: 200px;
+  left: 250px;
 }
 
 .lian-photo {
